chore(release): 4.0.0
Bump PHP 8.5, PostgreSQL 17, Solr 10, Redis 8, Varnish 8, and pin RDF4J 6.
Existing Postgres, Solr, and RDF4J volumes from the previous majors are not reused.